--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Advanced CSS Learning</h1>
-    <article>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript</article>
+    <blockquote>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript</blockquote>
+
+    <h2>Why Learning CSS</h2>
+    <blockquote>Many older websites that were built without CSS prove difficult to redesign. But once a site is built with CSS hooks, it can be redesigned very quickly. Changing things like the colors and backgrounds refresh how a site looks with very little effort. In fact, many sites now put up special versions of their sites for special occasions and they can do this because it only takes a few hours to create an alternate stylesheet for the occasion.</blockquote>
 </body>
 </html>
